# qtquick-mpv

./: .gitignore  Justfile  Readme.md  pyproject.toml  pyqt5.py  pyqt6.py  pyside2.py  pyside6-patched.py  pyside6.py  requirements.txt  window.qml
pyqt5/: README.rst  main.py
pyqt5/layouts/: mpv.qml
pyqt6/: main.py
pyqt6/layouts/: mpv.qml
pyside2/: README.rst  main.py
pyside2/layouts/: mpv.qml
pyside6/: main.py
pyside6/layouts/: mpv.qml
