[project]
name = "qtquick-mpv"
version = "0.1.0"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "PyOpenGL>=3.1.9",
    "mpv>=1.0.7",
    "PyQt5>=5.15.11",
    "PyQt6>=6.9.0",
    "PySide2>=5.15.2.1",
    "PySide6>=6.9.0",
    "glfw>=2.8.0",
]
